--- a/backend/config.env
+++ b/backend/config.env
@@ -1,3 +1,3 @@
 DATABASE_PASSWORD=sebachaca
-DATA_BASE= mongodb+srv://sebachaca:sebachaca@mtg-cluster.bmfit.mongodb.net/AlkemyDB?retryWrites=true&w=majority
+DATA_BASE= mongodb+srv://sebachaca:sebachaca@mtg-cluster.bmfit.mongodb.net/nucbar?retryWrites=true&w=majority
 PORT=4000
