--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express-rate-limit": "^5.5.0",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mercadopago": "^1.5.9",
     "mongoose": "^6.0.10",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.0",
