--- a/nucbar/package.json
+++ b/nucbar/package.json
@@ -53,6 +53,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router": "^5.1.18"
+    "@types/react-router": "^5.1.18",
+    "@types/react-router-dom": "^5.3.3"
   }
 }
