--- a/nucbar/package.json
+++ b/nucbar/package.json
@@ -14,7 +14,6 @@
     "@types/node": "^18.6.3",
     "@types/react": "^17.0.48",
     "@types/react-dom": "^18.0.6",
-    "@types/react-redux": "^7.1.24",
     "axios": "^0.21.1",
     "framer-motion": "^4.1.17",
     "react": "^18.0.0",
@@ -53,7 +52,10 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.24",
     "@types/react-router": "^5.1.18",
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0"
   }
 }
